# AnomalySpotter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.md  steam.md
assets/: anomaly-spotter.desktop
cmake/: llvm-mingw-toolchain.cmake  mingw-toolchain.cmake
legal/: THIRD-PARTY-NOTICES.txt
src/: DiffEngine.cpp  DiffEngine.h  GlobalHotkeys.cpp  GlobalHotkeys.h  HudOverlay.cpp  HudOverlay.h  MainWindow.cpp  MainWindow.h  OverlayWindow.cpp  OverlayWindow.h  PortalHotkeys.cpp  PortalHotkeys.h  ScreenCaptureService.cpp  ScreenCaptureService.h  WindowsHotkeys.cpp  WindowsHotkeys.h  X11Hotkeys.cpp  X11Hotkeys.h  main.cpp
tests/scene-window/: main.cpp
tests/unit/: tst_capture.cpp  tst_diffengine.cpp  tst_trainer.cpp
tools/: package-windows.sh
